support both named and default configuration